[package]
name = "wrpc-interface-blobstore"
version = "0.16.0"
description = "wRPC blobstore interface"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/wrpc/blobstore"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wrpc/blobstore"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
tracing = { workspace = true, features = ["attributes"] }
wrpc-transport = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
wrpc-cli = { workspace = true, features = ["nats"] }
wrpc-transport-nats = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-nats = { version = "0.33", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
wrpc-cli = { version = "0.1", default-features = false }
wrpc-transport = { version = "0.24.3", default-features = false }
wrpc-transport-nats = { version = "0.21", default-features = false }
