[package]
name = "wrpc-interface-blobstore"
version = "0.18.0"
description = "wRPC blobstore interface"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/wrpc/blobstore"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wrpc/blobstore"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
tracing = { workspace = true, features = ["attributes"] }
wit-bindgen-wrpc = { workspace = true }
wrpc-transport = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
test-log = { workspace = true, features = ["color", "log", "trace"] }
tokio = { workspace = true, features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
wrpc-cli = { workspace = true, features = ["nats"] }
wrpc-transport-nats = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-nats = { package = "async-nats-wrpc", version = "0.35.1", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
test-log = { version = "0.2", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
wit-bindgen-wrpc = { version = "0.4.10", default-features = false }
wrpc-cli = { version = "0.2", default-features = false }
wrpc-transport = { version = "0.26.4", default-features = false }
wrpc-transport-nats = { version = "0.22.1", default-features = false }
